--- a/ration-order/ration-order-web/pom.xml
+++ b/ration-order/ration-order-web/pom.xml
@@ -3,10 +3,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
-  <groupId>com.homeutil</groupId>
+  <parent>
+  	<groupId>com.homeutil</groupId>
+  	<artifactId>ration-order</artifactId>
+  	<version>1.0-SNAPSHOT</version>
+  </parent>
+  
   <artifactId>ration-order-web</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+ 
   <packaging>war</packaging>
 
   <name>ration-order-web Maven Webapp</name>
