--- a/ration-order/pom.xml
+++ b/ration-order/pom.xml
@@ -28,7 +28,17 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.7</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>5.0.5.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+			<version>5.0.5.RELEASE</version>
+		</dependency>
+
 
 	</dependencies>
 	<build>
