--- a/ration-order/ration-order-core/pom.xml
+++ b/ration-order/ration-order-core/pom.xml
@@ -1,29 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-  	<groupId>com.homeutil</groupId>
-  	<artifactId>ration-order</artifactId>
-  	<version>1.0-SNAPSHOT</version>
-  </parent>
-  <artifactId>ration-order-core</artifactId>
-  <name>ration-order-core</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://localhost:8080/ration-order</url>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.homeutil</groupId>
+		<artifactId>ration-order</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
+	<artifactId>ration-order-core</artifactId>
+	<name>ration-order-core</name>
+	<!-- FIXME change it to the project's website -->
+	<url>http://localhost:8080/ration-order</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-  </properties>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
 
-  <dependencies>
-   
-  </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-mongodb</artifactId>
+			<version>2.0.6.RELEASE</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework</groupId>
+					<artifactId>spring-context</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.springframework</groupId>
+					<artifactId>spring-beans</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 
-  <build>
-    
-  </build>
+	</dependencies>
+
+	<build>
+
+	</build>
 </project>
